--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,15 +16,18 @@ main:
   - name: Courses
     url:  '#online courses'
     weight: 40
+  - name: Awards & Accomplishments
+    url:  '#awards'
+    weight: 50
   - name: Talks
     url: '#talks'
-    weight: 50
+    weight: 60
   - name: Publications
     url: '#featured'
-    weight: 60
+    weight: 70
   - name: Contact
     url: '#contact'
-    weight: 70
+    weight: 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
