--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,30 +4,33 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
+  - name: Home
+    url: /
+    weight: 10
   - name: About
     url: '#about'
-    weight: 10
+    weight: 20
   - name: Experience
     url: '#experience'
-    weight: 20
+    weight: 30
   - name: Projects
     url: '#projects'
-    weight: 30
+    weight: 40
   - name: Courses
     url:  '#online courses'
-    weight: 40
+    weight: 50
   - name: Awards & Accomplishments
     url:  '#awards'
-    weight: 50
+    weight: 60
   - name: Talks
     url: '#talks'
-    weight: 60
+    weight: 70
   - name: Publications
     url: '#featured'
-    weight: 70
+    weight: 80
   - name: Contact
     url: '#contact'
-    weight: 80
+    weight: 90
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
