--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -26,9 +26,12 @@ main:
   - name: Publications
     url: '#featured'
     weight: 80
+  - name: Art Portfolio
+    url: '#featured'
+    weight: 90
   - name: Contact
     url: '#contact'
-    weight: 90
+    weight: 100
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
